httpbin-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gw
  namespace: ambient-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8081
        name: http-8081
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: ambient-demo
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-gw
  http:
    -  route:
        - destination:
            host: httpbin
            port:
              number: 80
